re-added include of package.mk, acidentally deleted before

--- a/serialfwd/Makefile
+++ b/serialfwd/Makefile
@@ -17,6 +17,7 @@ PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
 
 PKG_FIXUP:=autoreconf
 
+include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)
 	SECTION:=plan44
