vdcd: Disabled MIPS16 support (PKG_USE_MIPS16:=0)
Having this enabled leads to strange assembler errors when compiling httpcomm.cpp.
Without further explanation, this seems to be a general problem, see OpenWRT changeset 39880: https://dev.openwrt.org/changeset/39880/packages

--- a/vdcd/Makefile
+++ b/vdcd/Makefile
@@ -20,6 +20,9 @@ PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_FIXUP:=autoreconf
 
+# MIPS16 support leads to strange "{standard input}: Assembler messages:", so we turn it off (not needed anyway)
+PKG_USE_MIPS16:=0
+
 include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)
