--- a/p44sbbd/Makefile
+++ b/p44sbbd/Makefile
@@ -7,13 +7,13 @@ include $(TOPDIR)/rules.mk
 # name
 PKG_NAME:=p44sbbd
 # version of what we are downloading
-PKG_VERSION:=0.1
+PKG_VERSION:=0.2
 # version of this makefile
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=newmodules
-PKG_SOURCE_URL:=ssh://plan44@plan44.ch/home/plan44/sharedgit/p44sbbd.git
+PKG_SOURCE_VERSION:=master
+PKG_SOURCE_URL:=https://github.com/plan44/p44sbbd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
