--- a/pixelboard-config/Makefile
+++ b/pixelboard-config/Makefile
@@ -17,7 +17,7 @@ PKG_CHECK_FORMAT_SECURITY:=0
 include $(INCLUDE_DIR)/package.mk
 
 define Package/$(PKG_NAME)
-	DEPENDS:=+mg44 +pixelboardd
+	DEPENDS:=+mg44 +pixelboardd +kmod-p44-ledchain
 	SECTION:=plan44
 	CATEGORY:=plan44
 	SUBMENU:=toys
