p44-ledchain: extended dependency on mt76x8 or mt7688 for compatibility between LEDE 17.01 and master

--- a/p44-ledchain/Makefile
+++ b/p44-ledchain/Makefile
@@ -39,7 +39,7 @@ include $(INCLUDE_DIR)/package.mk
 
 define KernelPackage/$(PKG_NAME)
 	SUBMENU:=Other modules
-	DEPENDS:=@TARGET_ramips_mt7688
+	DEPENDS:=@(TARGET_ramips_mt76x8||TARGET_ramips_mt7688)
 	TITLE:=p44-ledchain driver for WS28xx/SK68xx
 	FILES:= $(PKG_BUILD_DIR)/p44-ledchain.ko
 endef
