i2c-tools: updated to reflect new source location and some details (from regular i2c-tools package)

--- a/i2c-tools/Makefile
+++ b/i2c-tools/Makefile
@@ -1,20 +1,21 @@
 #
-# Copyright (C) 2007-2011 OpenWrt.org
+# Copyright (C) 2007-2015 OpenWrt.org
 #
 # This is free software, licensed under the GNU General ic License v2.
 # See /LICENSE for more information.
 #
 
 include $(TOPDIR)/rules.mk
-include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=i2c-tools
-PKG_VERSION:=3.0.3
+PKG_VERSION:=3.1.2
 PKG_RELEASE:=1
 
+PKG_SOURCE_URL:=http://dl.lm-sensors.org/i2c-tools/releases/ \
+                http://fossies.org/linux/misc/
+
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
-PKG_SOURCE_URL:=http://dl.lm-sensors.org/i2c-tools/releases
-#PKG_MD5SUM:=f15019e559e378c6e9d5d6299a00df21
+PKG_HASH:=db5e69f2e2a6e3aa2ecdfe6a5f490b149c504468770f58921c8c5b8a7860a441
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -45,13 +46,15 @@ define Package/$(PKG_NAME)/description
  been removed from p44 version of i2c-tools
 endef
 
-TARGET_CPPFLAGS += -I$(LINUX_DIR)/include
+TARGET_CPPFLAGS += -I$(PKG_BUILD_DIR)/include
 
 define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR) \
 		LINUX="$(LINUX_DIR)" \
 		CC="$(TARGET_CC)" \
-		STAGING_DIR="$(STAGING_DIR)"
+		STAGING_DIR="$(STAGING_DIR)" \
+		LDFLAGS="$(TARGET_LDFLAGS)" \
+		CFLAGS="$(TARGET_CFLAGS)"
 endef
 
 
