pagekitec: bump to newest version (but usually this version is not installed, but the standard OpenWrt versiion in packages/net)

--- a/pagekitec/Makefile
+++ b/pagekitec/Makefile
@@ -9,14 +9,16 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=pagekitec
 #PKG_REV:=0.90.150130
-PKG_REV:=baf37caeed0ea456b29ee6f949811e1e22096219
-PKG_VERSION:=$(PKG_REV)C
-PKG_RELEASE:=1
+#PKG_VERSION:=$(PKG_REV)C
+PKG_REV:=99a2de732439d773f5ba9e4cea5db5d3f0e070f9
+PKG_VERSION:=$(PKG_REV)
+PKG_RELEASE:=2
 PKG_LICENSE:=Apache-2.0
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE:=$(PKG_NAME)-v$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://github.com/pagekite/libpagekite.git
 PKG_SOURCE_PROTO:=git
+#PKG_SOURCE_VERSION:=v$(PKG_REV)
 PKG_SOURCE_VERSION:=$(PKG_REV)
 
 include $(INCLUDE_DIR)/package.mk
