--- a/p44-extdev-elsner/Makefile
+++ b/p44-extdev-elsner/Makefile
@@ -1,4 +1,4 @@
-# Copyright (c) 2018 plan44.ch / Lukas Zeller, Zurich, Switzerland
+# Copyright (c) 2018-2019 plan44.ch / Lukas Zeller, Zurich, Switzerland
 #
 # Author: Lukas Zeller <luz@plan44.ch>
 
