--- a/i2c-tools/Makefile
+++ b/i2c-tools/Makefile
@@ -1,25 +1,23 @@
 #
-# Copyright (C) 2007-2011 OpenWrt.org
+# Copyright (C) 2007-2015 OpenWrt.org
 #
 # This is free software, licensed under the GNU General ic License v2.
 # See /LICENSE for more information.
 #
 
 include $(TOPDIR)/rules.mk
-include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=i2c-tools
 PKG_VERSION:=3.1.2
 PKG_RELEASE:=2
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=http://dl.lm-sensors.org/i2c-tools/releases/ \
                 http://fossies.org/linux/misc/
+
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_HASH:=db5e69f2e2a6e3aa2ecdfe6a5f490b149c504468770f58921c8c5b8a7860a441
 
-
 include $(INCLUDE_DIR)/package.mk
-$(call include_mk, python-package.mk)
 
 define Package/$(PKG_NAME)
 	SECTION:=plan44
@@ -41,21 +39,22 @@ define Package/$(PKG_NAME)/description
  packages can use it.
 
  Note that it also installs a copy of i2c-dev.h as lib-i2c-dev.h
- because due to search path order, the override might not
+ because due to search path order, the override might not work
  when the toolchain /usr/include also contains a i2c-dev.h.
 
  Note also that the originally included python-smbus package has
  been removed from p44 version of i2c-tools
 endef
 
-TARGET_CPPFLAGS += -I$(LINUX_DIR)/include
+TARGET_CPPFLAGS += -I$(PKG_BUILD_DIR)/include
 
 define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR) \
 		LINUX="$(LINUX_DIR)" \
 		CC="$(TARGET_CC)" \
-		STAGING_DIR="$(STAGING_DIR)"
-	$(Build/Compile/python-smbus)
+		STAGING_DIR="$(STAGING_DIR)" \
+		LDFLAGS="$(TARGET_LDFLAGS)" \
+		CFLAGS="$(TARGET_CFLAGS)"
 endef
 
 
